pages/components/Navbar/navbar.module.css
.main,



.navbar {
  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;
  background-color:#ffffff;
  width: 100%;
  height: 50px;
  border-bottom: 1px solid #696969c1;

  position: fixed;
  top: 0;
  z-index: 999;
}

.navbarMenu {
  /* space around elements evenly using display flex */
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  display: none; 
  margin-right: 2rem;
 
}

.open {
  display: flex;
  z-index: 999;
}

.navbarMenu.open {
  /* transition open  */
  transform: translateY(0);
  display: flex;
  flex-direction: column;
  position: absolute;
  top: 50px;  /* position below the navbar */
  right: 0;   /* align to the right edge of the navbar */
  width: 50%;  /* full-width dropdown on small screens */
  
  background-color: white;  /* background color for visibility */
  z-index: 999;  
}



.hamburger {
  display: none;
}

/* Show the hamburger menu and hide the full menu when the viewport is less than 600px wide */
@media (max-width: 700px) {
  .navbarMenu {
    display: none;


  }

  .hamburger {
    display: flex;
    flex-direction: column;
    cursor: pointer;
    margin-right: 2rem;
    margin-top: 0.5rem;
    width: 25px;

  }

  .navbarMenu.open {
    width: 50%;
    height: 30vh;
    background-color: #fad7ff;
    border-radius: 10px;
    transition: 0.5s;
    overflow: hidden;
    z-index: 999;
    margin-right: 0;

  }


  .navbarMenu.open a {
    font-size: 25px;
    width: 100%;
    text-align: center; 
    margin: 10px 0;
    height: 100%;
    
  }

}

/* Show the full menu and hide the hamburger icon when the viewport is at least 600px wide */
@media (min-width: 600px) {
  .navbarMenu {
    display: flex;
  }

  .hamburger {
    display: none;
  }
}

.navbarMenu a {
  text-decoration: none;
  color: #9100d5;
  font-size: 16px;
  padding: 10px 0px;
}


.navbarMenu a:hover {
  background-color:#9217cbd2;
  color: white;
  border-radius: 10px;
  transition: 0.5s;
}

.navbarBrand {
  /* space around elements evenly using display flex */
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  margin-left: 3rem;
}

.navbarBrand h2 {
  font-size: 25px;
  /* make font weight less bold  */
  font-weight: 600;
  color: #9100d5;
  /* make it link to home */
  cursor: pointer;
}
.navbarBrand img {
  height: 100%;
  margin-right: 10px;
  cursor: pointer;
  display: flex;  
  align-items: center;
}

